--- a/002/index.html
+++ b/002/index.html
@@ -50,7 +50,7 @@
         </section>
        
         <section class="section-service">
-            <h1 id="service-titulo">Meus serviços</h1>
+            <h1 id="service-titulo">Nossos serviços</h1>
            <!-- ============================================= -->
            
             <article class="servico">
