--- a/002/index.html
+++ b/002/index.html
@@ -42,7 +42,7 @@
                     nulla accusamus quisquam repellendus esse tempora quidem praesentium enim corporis dignissimos quam
                     commodi voluptates nostrum, saepe vitae adipisci.
                 </p>
-                <button type="button">Comerçar agora</button>
+                <button type="button" id="btn-init">Comerçar agora</button>
             </div>
             <div class="products-img">
                 <img src="./img/img-1.png" alt="" srcset="">
